--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #3d3c96;
+  background-color: #0aec0a;
   font-family: "Open Sans", sans-serif;
   color: #FFF;
   overflow-x: hidden; }
